Fix test ocaml-general after collection changes exposed an archive format error.
A change in the collection scripts when dropping IPC::Run exposed an
archive error that was previously ignored. The error is fixed here.
Now the package builds a valid archive named libbaz.a.

Also devolves d/rules, which created files on the go, into static
files installed via debhelper. Most of them are in orig/ocaml.

Also, while 'touch' created files with zero size, the new files have
content.  That makes it possible for Lintian to conclude that
no-architecture dependent files are present. The resulting tag was
added to the expected tags.

Gbp-Dch: ignore

--- a/t/tags/checks/ocaml/ocaml-general/orig/Makefile
+++ b/t/tags/checks/ocaml/ocaml-general/orig/Makefile
@@ -1,6 +1,6 @@
 # A simple makefile to build a *.o file and a *.a file to install to test
 # the OCaml checks for dangling *.cmx files.
-all: symbol.a symbol-dev.a
+all: symbol.a symbol-dev.a libbaz.a
 
 %.a: %.o
 	ar rv $@ $<
@@ -12,3 +12,6 @@ all: symbol.a symbol-dev.a
 
 symbol-dev.o: symbol.c
 	cc -c $< -o $@
+
+libbaz.a: symbol-dev.o
+	ar r $@ $<
