Correct false-positives in when checking for dh-runit packages that lack a "Breaks" substvar by ensuring that the binary package actually uses runit. (Closes: #924116)

--- a/t/tags/checks/debhelper/debhelper-dh-runit-but-lacks-breaks-substvar/debian/rules
+++ b/t/tags/checks/debhelper/debhelper-dh-runit-but-lacks-breaks-substvar/debian/rules
@@ -2,3 +2,10 @@
 
 %:
 	dh $@ --with runit
+
+override_dh_auto_install:
+	dh_auto_install
+	for X in $(shell dh_listpackages); do \
+		mkdir -p debian/$$X/etc/sv; \
+		touch debian/$$X/etc/sv/$$X; \
+	done
