Fix test changelog-file-syntax.
Adjusts this test to use the new and improved 'debs' skeleton. It
features a make-based builder that works with all tests. It no longer
uses t/bin/create-deb.

Control files are located in the ./DEBIAN folder. The mandatory
documentation files copyright and changelog are in the ./doc folder.
Extra data files are provided in the ./root folder.  The package is
built from files in the ./build folder, which is also the folder in
which the scripts tend to operate to set links or permissions, for
example.

Gbp-Dch: ignore

--- a/t/tags/debs/changelog-file-syntax/doc/changelog.in
+++ b/t/tags/debs/changelog-file-syntax/doc/changelog.in
@@ -1,11 +1,11 @@
-{$source} (1.0) unstable; urgency=low
+{$source} ({$version}) {$distribution}; urgency=low
 
   * Lintian Test Suite.
   * Test: {$testname}
 
  -- {$author}  {$date}
 
-{$source} (0.1) unstable; urgency=low
+{$source} ({$prev-version}) unstable; urgency=low
 
   * Lintian Test Suite.
   * Test: {$testname}
