Fix test description-synopsis-spaces.
Adjusts this test to use the new and improved 'debs' skeleton. It
features a make-based builder that works with all tests. It no longer
uses t/bin/create-deb.

Control files are located in the ./DEBIAN folder. The mandatory
documentation files copyright and changelog are in the ./doc folder.
Extra data files are provided in the ./root folder.  The package is
built from files in the ./build folder, which is also the folder in
which the scripts tend to operate to set links or permissions, for
example.

Gbp-Dch: ignore

--- a/t/tags/debs/description-synopsis-spaces/DEBIAN/control.in
+++ b/t/tags/debs/description-synopsis-spaces/DEBIAN/control.in
@@ -1,8 +1,8 @@
-Package: description-synopsis-spaces
-Version: 1.0
-Architecture: all
-Maintainer: Debian Lintian Maintainers <lintian-maint@debian.org>
-Section: devel
+Package: {$source}
+Version: {$version}
+Architecture: {$package_architecture}
+Maintainer: {$author}
+Section: {$section}
 Priority: optional
 Description:     synopsis starts with spaces
  This is a test package designed to exercise some feature or tag of
