--- a/t/tags/debs/fields-obsolete-relation/DEBIAN/control.in
+++ b/t/tags/debs/fields-obsolete-relation/DEBIAN/control.in
@@ -1,11 +1,11 @@
-Package: fields-obsolete-relation
-Version: 1.0
-Architecture: all
-Maintainer: Debian Lintian Maintainers <lintian-maint@debian.org>
-Section: devel
+Package: {$source}
+Version: {$version}
+Architecture: {$package_architecture}
+Maintainer: {$author}
+Section: {$section}
 Priority: optional
 Conflicts: libsqlite3-0 (< 3.6.12)
-Description: Test for obsolete relation syntax in a binary package
+Description: {$description}
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
  things.  It should not be installed like a regular package.  It may
