Fix test fields-wildcard-binary.
Adjusts this test to use the new and improved 'debs' skeleton. It
features a make-based builder that works with all tests. It no longer
uses t/bin/create-deb.

Control files are located in the ./DEBIAN folder. The mandatory
documentation files copyright and changelog are in the ./doc folder.
Extra data files are provided in the ./root folder.  The package is
built from files in the ./build folder, which is also the folder in
which the scripts tend to operate to set links or permissions, for
example.

Gbp-Dch: ignore

--- a/t/tags/debs/fields-wildcard-binary/DEBIAN/control.in
+++ b/t/tags/debs/fields-wildcard-binary/DEBIAN/control.in
@@ -1,10 +1,10 @@
-Package: fields-wildcard-binary
-Version: 1.0
+Package: {$source}
+Version: {$version}
 Architecture: any-i386
-Maintainer: Debian Lintian Maintainers <lintian-maint@debian.org>
-Section: devel
+Maintainer: {$author}
+Section: {$section}
 Priority: optional
-Description: Test for architecture wildcard in binary package
+Description: {$description}
  This is a test package designed to exercise some feature or tag of
  Lintian.  It is part of the Lintian test suite and may do very odd
  things.  It should not be installed like a regular package.  It may
