--- a/t/tags/source/control-file-missing-separator/debian/control.in
+++ b/t/tags/source/control-file-missing-separator/debian/control.in
@@ -2,7 +2,7 @@ Source: control-file-missing-separator
 Section: devel
 Priority: optional
 Maintainer: {$author}
-Build-Depends: debhelper (>= 7),
+Build-Depends: {$build_depends},
  fiddle [amd64 powerpc
  mips mipsel
  hppa
