--- a/t/tags/source/fields-src-bad-version/debian/control.in
+++ b/t/tags/source/fields-src-bad-version/debian/control.in
@@ -2,7 +2,7 @@ Source: {$source}
 Section: devel
 Priority: optional
 Maintainer: {$author}
-Build-Depends: debhelper (>= 7), g++ (>= s4.0)
+Build-Depends: {$build_depends}, g++ (>= s4.0)
 Standards-Version: {$standards_version}
 
 Package: {$source}
