Add tests for recent pkg-js tags.
Gbp-Dch: ignore

Signed-off-by: Chris Lamb <lamby@debian.org>

--- a/debian/control
+++ b/debian/control
@@ -74,6 +74,7 @@ Build-Depends:
  node-uglify <!nocheck>,
  patchutils <!nocheck>,
  perl <!nocheck>,
+ pkg-js-tools <!nocheck>,
  pkg-php-tools <!nocheck>,
  python <!nocheck>,
  python-all-dev <!nocheck>,
