Fix some previously undetected problems in test files-mtime.
The file was already zipped somewhere else. Remove the destination to
make sure the gzip command succeeds.

Gbp-Dch: ignore

--- a/t/tags/checks/files/files-mtime/pre-data.in
+++ b/t/tags/checks/files/files-mtime/pre-data.in
@@ -5,6 +5,7 @@ set -e
 rootdir="$1"
 name="$2"
 
+rm -f "$rootdir/usr/share/$name/foo.gz"
 gzip --best "$rootdir/usr/share/$name/foo"
 
 # we set the mtime to "right" now.  We use that as "now" to be
