Fix previously undetected problem in template deb-make-builder.
The call to gzip fails when the file is a link. That feature is used
in some tests. Ignores the status of the entire conditional.

Gbp-Dch: ignore

--- a/t/templates/deb-make-builder/Makefile.in
+++ b/t/templates/deb-make-builder/Makefile.in
@@ -35,7 +35,7 @@ $(package): fix-perm
 	if [ -x ./pre-build ] ; then ./pre-build "$(rootdir)" "$(name)" ; fi
 
 	-mkdir -p $(docdir)
-	if [ -f $(changelogfile) ] ; then \
+	-if [ -f $(changelogfile) ] ; then \
 		install --mode 0644 $(changelogfile) $(changelogtarget) ; \
 		gzip -9nf $(changelogtarget) ; \
 	fi
