tests: Skip some mkdir and cp calls when they are redundant
Gbp-Dch: ignore
Signed-off-by: Niels Thykier <niels@thykier.net>

--- a/t/templates/source-make-builder/Makefile.in
+++ b/t/templates/source-make-builder/Makefile.in
@@ -43,8 +43,7 @@ $(origtargz): clean
 else
 $(origtargz): clean
 	-mkdir $(origdata)
-	-mkdir $(packagedir)
-	cp -rp $(origdata)/. $(packagedir)
+	if [ -d $(origdata)/. ] ; then cp -rp $(origdata)/. $(packagedir) ; fi
 	if [ -x ./pre_upstream ] ; then ./pre_upstream $(shell realpath $(packagedir)) ; fi
 	tar czf $(origtargz) $(packagedir)
 	if [ -f $(formatfile) ] && grep --quiet "^3\.. (quilt)$$" $(formatfile) ; then rm -rf $(packagedir)/debian ; fi
