--- a/t/templates/tests-make-builder/Makefile.in
+++ b/t/templates/tests-make-builder/Makefile.in
@@ -26,10 +26,8 @@ product: $(origtargz)
 	gpg-connect-agent --homedir "$$tmpdir" KILLAGENT /bye ; \
 	rm -rf "$$tmpdir" ; \
 	fi ;
-	-mkdir -p $(diffdata)
-	cp -rp $(diffdata)/. $(packagedir)
-	-mkdir -p $(debiandata)
-	cp -rp $(debiandata)/. $(packagedir)/debian
+	if [ -d $(diffdata)/. ] ; then cp -rp $(diffdata)/. $(packagedir) ; fi
+	if [ -d $(debiandata)/. ] ; then cp -rp $(debiandata)/. $(packagedir)/debian ; fi
 	if [ -x ./pre_build ] ; then ./pre_build $(shell realpath $(packagedir)) ; fi
 	cd $(packagedir) && dpkg-buildpackage -rfakeroot -us -uc -d -iNEVER_MATCH_ANYTHING -INEVER_MATCH_ANYTHING --source-option=--auto-commit
 	if [ -x ./post_build ] ; then ./post_build $(shell realpath $(packagedir)) ; fi
@@ -37,13 +35,11 @@ product: $(origtargz)
 ifeq ($(type),native)
 $(origtargz): clean
 	-mkdir $(packagedir)
-	-mkdir $(origdata)
-	cp -rp $(origdata)/. $(packagedir)
+	if [ -d $(origdata)/. ] ; then cp -rp $(origdata)/. $(packagedir) ; fi
 else
 $(origtargz): clean
 	-mkdir $(packagedir)
-	-mkdir $(origdata)
-	cp -rp $(origdata)/. $(packagedir)
+	if [ -d $(origdata)/. ] ; then cp -rp $(origdata)/. $(packagedir) ; fi
 	if [ -x ./pre_upstream ] ; then ./pre_upstream $(shell realpath $(packagedir)) ; fi
 	tar czf $(origtargz) $(packagedir)
 	if [ -f $(formatfile) ] && grep --quiet "^3\.. (quilt)$$" $(formatfile) ; then rm -rf $(packagedir)/debian ; fi
