--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,6 +5,7 @@ before_script:
 
 .test_template: &test
   script:
+    - frontend/lintian --version
     - t/bin/build-test-packages
     - t/bin/runtests
 
