--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -6,8 +6,8 @@ before_script:
 .test_template: &test
   script:
     - frontend/lintian --version
-    - t/bin/build-test-packages
-    - t/bin/runtests
+    - time t/bin/build-test-packages
+    - time t/bin/runtests
 
 unstable:
   <<: *test
