Tidy package long description.

--- a/debian/control
+++ b/debian/control
@@ -150,19 +150,12 @@ Replaces:
  funny-manpages (<< 1.3-5.1),
 Multi-Arch: foreign
 Description: Debian package checker
- Lintian dissects Debian packages and reports bugs and policy
- violations. It contains automated checks for many aspects of Debian
- policy as well as some checks for common errors.
+ Lintian dissects Debian packages and reports bugs and policy violations. It
+ contains automated checks for many aspects of Debian policy as well as some
+ checks for common errors.
  .
- It uses an archive directory, called a "laboratory", in which it stores
- information about the packages it examines.  It can keep this
- information between multiple invocations in order to avoid repeating
- expensive data-collection operations. This makes it possible to check the
- complete Debian archive for bugs, in a reasonable time.
- .
- This package is useful for all people who want to check Debian
- packages for compliance with Debian policy. Every Debian maintainer
- should check packages with this tool before uploading them to the
- archive.
+ This package is useful for all people who want to check Debian packages for
+ compliance with Debian policy. Every Debian maintainer should check packages
+ with this tool before uploading them to the archive.
  .
  This version of Lintian is calibrated for policy version 4.3.0.
