Add libberkeleydb-perl and libmldbm-perl as both Depends and Build-Depends.
These databases will properly encode file names in collections. The
current flat text files are fast and efficent but error-prone because
of encoding and escaping issues.

For details, please see Bug#929729.

A ticket was filed under RT#7890 to also update the installed packages
on lindsay.d.o.

Gbp-Dch: ignore

--- a/debian/control
+++ b/debian/control
@@ -32,6 +32,7 @@ Build-Depends:
  javahelper <!nocheck>,
  libapt-pkg-perl <!nocheck>,
  libarchive-zip-perl <!nocheck>,
+ libberkeleydb-perl <!nocheck>,
  libcapture-tiny-perl <!nocheck>,
  libcgi-pm-perl <!nocheck>,
  libclass-accessor-perl <!nocheck>,
@@ -42,13 +43,14 @@ Build-Depends:
  libfile-basedir-perl <!nocheck>,
  libfile-find-rule-perl <!nocheck>,
  libhtml-parser-perl <!nocheck>,
- libio-async-perl,
+ libio-async-perl <!nocheck>,
  libio-async-loop-epoll-perl <!nocheck>,
  libipc-run-perl <!nocheck>,
  liblist-compare-perl <!nocheck>,
  liblist-moreutils-perl <!nocheck>,
+ libmldbm-perl <!nocheck>,
  libmoo-perl <!nocheck>,
- libpath-tiny-perl,
+ libpath-tiny-perl <!nocheck>,
  libtest-minimumversion-perl <!nocheck>,
  libtest-perl-critic-perl <!nocheck>,
  libtest-pod-coverage-perl <!nocheck>,
@@ -107,6 +109,7 @@ Depends:
  intltool-debian,
  libapt-pkg-perl,
  libarchive-zip-perl,
+ libberkeleydb-perl,
  libcapture-tiny-perl,
  libcgi-pm-perl,
  libclass-accessor-perl,
@@ -121,6 +124,7 @@ Depends:
  libipc-run-perl,
  liblist-compare-perl,
  liblist-moreutils-perl,
+ libmldbm-perl,
  libmoo-perl,
  libpath-tiny-perl,
  libtext-levenshtein-perl,
