--- a/t/tags/checks/changelog-file/changelog-file-epoch-changed-upstream-version-increase/debian/changelog.in
+++ b/t/tags/checks/changelog-file/changelog-file-epoch-changed-upstream-version-increase/debian/changelog.in
@@ -5,7 +5,7 @@
 
  -- {$author}  {$date}
 
-{$source} (1:0) unstable; urgency=low
+{$source} (1:0.9-4) unstable; urgency=low
 
   * Initial upload.
 
