--- a/t/tags/checks/systemd/systemd-general/debian/rules
+++ b/t/tags/checks/systemd/systemd-general/debian/rules
@@ -13,7 +13,7 @@ override_dh_install:
 	mkfifo $(INITD_DIR)/fifo-pipe-as-init
 	mkfifo $(SYSD_DIR)/fifo-pipe-as-init.service
 	install -m 0755 debian/bootmisc.sh $(INITD_DIR)
-	install -m 0755 debian/masked.init $(INITD_DIR)/masked
+	install -m 0755 debian/systemd-general.masked.init $(INITD_DIR)/masked
 	touch $(INITD_DIR)/README
 
 override_dh_fixperms:
@@ -24,3 +24,7 @@ override_dh_installinit:
 	dh_installinit
 	dh_installinit --name systemd-aliasd
 	dh_installinit --name sourced.sh
+
+override_dh_installsystemd:
+	dh_installsystemd
+	dh_installsystemd --name sourced
