Acknowledge prior breakage due to new separate tags layout in d/control.
The tags layout in separate files broke custom profiles in other
packages. The packages pkg-perl-tools and pkg-js-tools use custom
profiles that no longer work with recent version of Lintian.

The reason is the separation of tags from checks in commit 083e8396
and others.

Both packages adjusted their custom profiles in recent uploads.
Acknowledges the prior breakage in d/control.

Please see Bug#934100 and Bug#934144 for details.

Gbp-Dch: ignore

--- a/debian/control
+++ b/debian/control
@@ -146,7 +146,8 @@ Suggests:
  libtext-template-perl,
 Breaks:
  funny-manpages (<< 1.3-5.1),
- pkg-perl-tools (<< 0.23),
+ pkg-perl-tools (<< 0.53),
+ pkg-js-tools (<< 0.9.4),
 Replaces:
  funny-manpages (<< 1.3-5.1),
 Multi-Arch: foreign
