--- a/t/tags/checks/scripts/legacy-filenames/debian/changelog.in
+++ b/t/tags/checks/scripts/legacy-filenames/debian/changelog.in
@@ -1,4 +1,4 @@
-filenames (1:12-0.1) unstable; urgency=low
+filenames ({$version}) {$distribution}; urgency=low
 
   * /me is doing a correct NMU of this package, bumping the epoch too.
 
