In the legacy-fields family of tests, parameterize d/changelog.
The version 1.5-.3 is already available from the 'desc' files for
these tests. The default distribution from t/defaults/desc at the time
of writing was unstable.

Removes the hardcoded version and distribution for these tests for
eventual conversion to source format 3.0.

Gbp-Dch: ignore

--- a/t/tags/checks/changelog-file/legacy-fields/debian/changelog.in
+++ b/t/tags/checks/changelog-file/legacy-fields/debian/changelog.in
@@ -1,4 +1,4 @@
-fields (1.5-.3) unstable; urgency=low
+fields ({$version}) {$distribution}; urgency=low
 
   * This package adds tests for the following tags:
     - debian-revision-not-well-formed
