In the legacy-binary family of tests, parameterize d/changelog.
The version 4-1.1 is already available from the 'desc' files for these
tests. The default distribution from t/defaults/desc at the time of
writing was unstable.

Removes the hardcoded version and distribution for these tests for
eventual conversion to source format 3.0.

Gbp-Dch: ignore

--- a/t/tags/checks/binaries/legacy-binary/debian/changelog.in
+++ b/t/tags/checks/binaries/legacy-binary/debian/changelog.in
@@ -1,4 +1,4 @@
-binary (4-1.1) unstable; urgency=low
+binary ({$version}) {$distribution}; urgency=low
 
   * I'm doing an comaintainer-upload, acknowledging a NMU, but with a version
     number which suggests I'm doing a NMU myself.
