--- a/t/tags/checks/source-changelog/changelog-file-unreleased/debian/changelog.in
+++ b/t/tags/checks/source-changelog/changelog-file-unreleased/debian/changelog.in
@@ -1,4 +1,4 @@
-{$source} ({$version}) UNRELEASED; urgency=low
+{$source} ({$version}) {$distribution}; urgency=low
 
   * Lintian Test Suite.
   * Test: {$testname}
