Fix two tests for debhelper update 12.4, which dropped manual sequencing commands.
Two tests fail to build in unstable because a new debhelper version
there dropped support for manual sequencing. The relevant changelog
entry is:

  * dh: Retroactively remove support for manual dh sequence
    operators (--until, --after, --before and --remaining).
    This breaks about 8 source packages that still rely on this
    feature and have not yet migrated away.  (Closes: #932537)
    Please see the debhelper bug for relevant bug numbers and
    package names.

Two tests for the tag 'dh-manual-sequence-control-obsolete' could no
longer built due to build failure. Removed the manual sequencing and
adjusted the expected tags in both.

If the tag 'dh-manual-sequence-control-obsolete' cannot be tested in
another way, it will probably be removed from Lintian.

Gbp-Dch: ignore

--- a/t/tags/checks/debhelper/debhelper-no-depends/debian/rules
+++ b/t/tags/checks/debhelper/debhelper-no-depends/debian/rules
@@ -5,7 +5,6 @@
 binary: binary-arch binary-indep
 binary-arch:
 binary-indep:
-	dh binary-indep --until dh_prep
 	-dh_clideps
 	-dh_gtkmodules
 	dh_lisp || true
@@ -20,6 +19,6 @@ else
 	dh_pysupport
   endif
 endif
-	dh binary-indep --remaining
+	dh binary-indep
 	-dh_strip_nondeterminism
 	-dh_scour
