In the legacy-etcfiles family of tests, parameterize d/changelog.
The version 1 is already available from the 'desc' files for these
tests. The default distribution from t/defaults/desc at the time of
writing was unstable.

Removes the hardcoded version and distribution for these tests for
eventual conversion to source format 3.0.

Gbp-Dch: ignore

--- a/t/tags/checks/changelog-file/legacy-etcfiles/debian/changelog.in
+++ b/t/tags/checks/changelog-file/legacy-etcfiles/debian/changelog.in
@@ -1,4 +1,4 @@
-etcfiles (1) unstable; urgency=low
+etcfiles ({$version}) {$distribution}; urgency=low
 
   * Acknowledge NMU (Closes: #123456).
   * initial setup
