In the legacy-scripts family of tests, parameterize d/changelog.
The version 6ds-1ubuntu0.5.10.1 is already available from the 'desc'
files for these tests. The default distribution from t/defaults/desc
at the time of writing was unstable.

Removes the hardcoded version and distribution for these tests for
eventual conversion to source format 3.0.

Gbp-Dch: ignore

--- a/t/tags/checks/control-files/legacy-scripts/debian/changelog.in
+++ b/t/tags/checks/control-files/legacy-scripts/debian/changelog.in
@@ -1,4 +1,4 @@
-scripts (6ds-1ubuntu0.5.10.1) unstable; urgency=low
+scripts ({$version}) {$distribution}; urgency=low
 
   * I'm also not able to write my name.
   * Added a script in /etc/Xsession.d
