--- a/t/tags/checks/changelog-file/legacy-debug/debian/changelog.in
+++ b/t/tags/checks/changelog-file/legacy-debug/debian/changelog.in
@@ -1,4 +1,4 @@
-debug (1.0) unstable; urgency=low
+debug ({$version}) {$distribution}; urgency=low
 
   * NMU.
     (uploaded by the maintainer and with repeated version number)
