In the legacy-debconf family of tests, parameterize d/changelog.
The version 1~rc1 is already available from the 'desc' files for these
tests. The default distribution from t/defaults/desc at the time of
writing was unstable.

Removes the hardcoded version and distribution for these tests for
eventual conversion to source format 3.0.

Gbp-Dch: ignore

--- a/t/tags/checks/copyright-file/legacy-debconf/debian/changelog.in
+++ b/t/tags/checks/copyright-file/legacy-debconf/debian/changelog.in
@@ -1,4 +1,4 @@
-debconf (1~rc1) unstable; urgency=low
+debconf ({$version}) {$distribution}; urgency=low
 
   * Initial Release
   * Changelog line with exactly 80 characters which tests the line-too-long tag.
