In the legacy-relations family of tests, parameterize d/changelog.
The version 5 is already available from the 'desc' files for these
tests. The default distribution from t/defaults/desc at the time of
writing was unstable.

Removes the hardcoded version and distribution for these tests for
eventual conversion to source format 3.0.

Gbp-Dch: ignore

--- a/t/tags/checks/changelog-file/legacy-relations/debian/changelog.in
+++ b/t/tags/checks/changelog-file/legacy-relations/debian/changelog.in
@@ -1,4 +1,4 @@
-relations (5) unstable; urgency=low
+relations ({$version}) {$distribution}; urgency=low
 
   * I'm orphaning this package -- I'm sick of it: it's completely broken,
     lintian complains all over the place.
