Parameterize d/changelog for the two tracking tests generic-dh-make-2005 and generic-dh-make-2008.
The respective versions were already available from the 'desc' files
for these tests. The default distribution from t/defaults/desc at the
time of writing was unstable.

Removes the hardcoded versions and distributions for these tests for
eventual conversion to source format 3.0.

Gbp-Dch: ignore

--- a/t/tags/track/generic-dh-make-2008/debian/changelog.in
+++ b/t/tags/track/generic-dh-make-2008/debian/changelog.in
@@ -1,4 +1,4 @@
-generic-dh-make-2008 (1.0-1) unstable; urgency=low
+generic-dh-make-2008 ({$version}) {$distribution}; urgency=low
 
   * Initial release (Closes: #nnnn)  <nnnn is the bug number of your ITP>
 
