Remove test-only qualifier from python3-docutils Build-Dependency.
Gbp-Dch: ignore

--- a/debian/control
+++ b/debian/control
@@ -79,7 +79,7 @@ Build-Depends:
  python <!nocheck>,
  python-all-dev <!nocheck>,
  python-numpy <!nocheck>,
- python3-docutils <!nocheck>,
+ python3-docutils,
  quilt <!nocheck>,
  t1utils <!nocheck>,
  unzip <!nocheck>,
